--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,13 @@ body {
     font-family: sans-serif;
 }
 
+.bit-0 {
+    color: #990000;
+}
+.bit-1 {
+    color: #009900;
+}
+
 .exploration {
     display: flex;
 }
